KTTL-1065 - Full Bleed Image/Video + Text Hero > Video layout > Styling + functionality issues

--- a/src/theme/css/frontend/page-header/_img-bg.scss
+++ b/src/theme/css/frontend/page-header/_img-bg.scss
@@ -19,6 +19,19 @@
     @apply min-h-px800;
   }
 
+  // Playing video state
+  &--playing {
+    .page-header__playback-icon {
+      &.play.play {
+        @apply hidden;
+      }
+
+      &.pause.pause {
+        @apply block;
+      }
+    }
+  }
+
   .page-header__bg {
     @apply absolute top-0 left-0 w-full h-full;
 
@@ -35,7 +48,6 @@
 
   .page-header-img-wrap {
     @apply absolute w-full h-full top-0 left-0;
-    margin-top: -4px; //FIXME: Why -4px?
 
     img {
       @apply object-cover object-center;
@@ -57,6 +69,29 @@
 
     tiltb {
       @apply block;
+    }
+  }
+
+  .page-header__playback {
+    @apply absolute flex items-center justify-center w-px24 h-px24 left-px20 bottom-px38 cursor-pointer text-px24;
+    z-index: 1;
+
+    @screen md {
+      @apply left-px28 bottom-px28;
+    }
+
+    @screen xl {
+      @apply w-px28 h-px28 left-px32 bottom-px28 text-px28;
+    }
+  }
+
+  .page-header__playback-icon {
+    &.play {
+      @apply block transform -rotate-90;
+    }
+
+    &.pause {
+      @apply hidden block border-solid border-white border-l-px8 border-r-px8 w-px22 h-px24;
     }
   }
 
